--- a/src/components/AboutPage/AboutUsText/AboutUsText.css
+++ b/src/components/AboutPage/AboutUsText/AboutUsText.css
@@ -1,3 +1,26 @@
+.travel-images-section {
+    position: relative;
+    display: inline-block;
+    margin: 20px; /* Adjust as needed */
+  }
+  
+  .main-image {
+    width: 500px; /* Adjust main image size */
+    border: 3px solid #b7904d; /* Border color similar to reference */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Optional shadow for depth */
+  }
+  
+  .overlay-image {
+    position: absolute;
+    bottom: -30px; /* Adjust vertical positioning */
+    right: -55px; /* Adjust horizontal positioning */
+    width: 200px; /* Adjust overlay image size */
+    border: 3px solid #b7904d; /* Same border color as main image */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Optional shadow for depth */
+  }
+  
+
+
 .about-container {
     display: flex;
     justify-content: space-between;
@@ -12,19 +35,7 @@
     padding-right: 45px; /* Adjusted from left to right for spacing between text and images */
 }
 
-/* button {
-    border-radius: 12px;
-    padding: 12px;
-    background-color: #b7904d;
-    transition: background-color 0.3s ease;
-    cursor: pointer;
-    border: 2px solid transparent;
-} */
 
-/* button:hover {
-    background-color: gray;
-    color: white;
-} */
 
 .about-right {
     flex: 1;
