--- a/src/components/ContactPage/About/About.css
+++ b/src/components/ContactPage/About/About.css
@@ -1,3 +1,26 @@
+.travel-images-section {
+  position: relative;
+  display: inline-block;
+  margin: 20px; /* Adjust as needed */
+}
+
+.main-image {
+  width: 500px; /* Adjust main image size */
+  border: 3px solid #b7904d; /* Border color similar to reference */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Optional shadow for depth */
+}
+
+.overlay-image {
+  position: absolute;
+  bottom: -30px; /* Adjust vertical positioning */
+  right: -55px; /* Adjust horizontal positioning */
+  width: 200px; /* Adjust overlay image size */
+  border: 3px solid #b7904d; /* Same border color as main image */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Optional shadow for depth */
+}
+
+
+
 .about-container {
     display: flex;
     justify-content: space-between;
@@ -20,19 +43,22 @@
     cursor: pointer;
     
   } */
-  button {
-    border-radius: 12px;
-    padding: 12px;
-    background-color: #b7904d;
-    transition: background-color 0.3s ease; /* Add transition for smooth effect */
-    cursor: pointer;
-    border: 2px solid transparent;
+
+
+.more {
+  border-radius: 8px;
+  padding: 12px;
+  background-color: #b7904d;
+  transition: background-color 0.3s ease; /* Add transition for smooth effect */
+  cursor: pointer;
+  border: 2px solid transparent;
+  width: 20%;
 }
 
-button:hover {
-    background-color: gray; /* Change color on hover */
-    color: white; /* Optional: change text color for better contrast */
-    /* border-color: #f09535; */
+.more:hover {
+  background-color: black; /* Change color on hover */
+  color: white; /* Optional: change text color for better contrast */
+  /* border-color: #f09535; */
 }
 
   
