--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,8 +1,8 @@
 
-
-/* .container {
+/* 
+ .container {
   width: 100%;
-} */
+}  */
 .container-navbar {
     max-width: 1200px; 
     margin: 0 auto; /* Center the container */
