--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -95,6 +95,7 @@
   font-size: 1.5rem;
   cursor: pointer;
   color: #333;
+  margin-left: 75%;
 }
 
 .sidebar {
@@ -125,6 +126,7 @@
   color: white;
   font-size: 1.5rem;
   cursor: pointer;
+  margin-left: 75%;
 }
 
 .sidebar-links {
