--- a/src/components/Features/Features.css
+++ b/src/components/Features/Features.css
@@ -4,6 +4,7 @@
   /* background: linear-gradient(to bottom, #b7904d, #3a2a1e); */
   padding: 20px;
   color: white;
+  margin-top: 60px;
 }
 
 .feature-item {
