--- a/src/Destination/DestinationPicture/DestinationPicture.css
+++ b/src/Destination/DestinationPicture/DestinationPicture.css
@@ -8,6 +8,7 @@
     justify-content: center;
     align-items: center;
     text-align: center; /* Center text horizontally */
+    margin: -60px !important;
   }
   
   .ultra-destination {
