--- a/src/Destination/TravelGrid/TravelGrid.css
+++ b/src/Destination/TravelGrid/TravelGrid.css
@@ -1,9 +1,10 @@
-.container {
+.container-destination {
   max-width: 6xl;
   margin: 0 auto;
   padding: 1.5rem;
   margin-left: 70px;
   margin-right: 70px;
+  margin-top: 60px;
 }
 
 .grid {
