--- a/src/components/ContactPage/About/About.css
+++ b/src/components/ContactPage/About/About.css
@@ -29,6 +29,7 @@
     /* background-color: red; */
     margin-left: 30px;
     margin-right: 30px;
+    margin-top: 30px;
   }
   
   .about-left {
