--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -11,6 +11,7 @@
 .footer-column {
     flex: 1;
     margin: 0 20px;
+    /* justify-content: flex-start; */
 }
 
 .footer-column h3 {
@@ -127,13 +128,19 @@
     content: '';
     display: block;
     width: 90%;
-    height: 2px; /* Thickness of the line */
+    height: 2px; 
     background-color: white; /* Color of the line */
     position: absolute;
     top: 96%; /* Position it in the middle */
     left: 20;
     transform: translateY(-50%);
     
+}
+.social-icons-footer {
+    display: flex; /* Use flexbox for alignment */
+    justify-content: flex-start; /* Align icons to the left */
+    gap: 15px; /* Space between the icons */
+    margin-top: 10px; /* Optional: space above the icons */
 }
 
 
