--- a/src/components/Home/Footer/Footer.css
+++ b/src/components/Home/Footer/Footer.css
@@ -5,6 +5,8 @@
     color: #fff;
     padding: 20px;
     position: relative; /* Added for the line */
+    margin: 0 !important;
+    margin-top: 20px;
     
 }
 
