--- a/src/components/AboutPage/ContentOfAboutPage/ContentOfAboutPage.css
+++ b/src/components/AboutPage/ContentOfAboutPage/ContentOfAboutPage.css
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   margin: -60px !important; /* Adjust this for desired top margin */
+ 
 }
 
 .ultra-regular-about {
@@ -24,6 +25,7 @@
   padding: 10px;
   margin: 10px 0;
   text-align: center; /* Ensure text is centered */
+  
 }
 
 /* Media Query for Tablet & Small Screens */
@@ -31,6 +33,7 @@
   .headline-about {
     height: 80vh; /* Reduce height for smaller screens */
     margin: 0; /* Remove any negative margin */
+    margin: 0 !important;
     
   }
 
