--- a/src/components/Tour/FirstPageTour/FirstPageTour.css
+++ b/src/components/Tour/FirstPageTour/FirstPageTour.css
@@ -1,20 +1,31 @@
+.container-tour {
+  width: 100%;
+  height: 100vh;
+  background-image: url('https://bsmedia.business-standard.com/_media/bs/img/article/2024-08/07/full/1722995892-9811.jpg?im=FeatureCrop,size=(826,465)'); /* Path to the background image */
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat;
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  color: white; 
+  text-align: center; 
+}
+
+.ultra-tour {
+  font-family: 'Ultra', sans-serif; 
+  font-size: 4rem; 
+  color: white; 
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); 
+}
+
+
 .headline-tour {
-    background-image: url('https://bsmedia.business-standard.com/_media/bs/img/article/2024-08/07/full/1722995892-9811.jpg?im=FeatureCrop,size=(826,465)');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center; /* Center text horizontally */
-    margin: -60px !important;
-  }
-  
-  .ultra-tour {
-    font-family: 'Ultra', sans-serif; /* Ensure the font is applied */
-    font-size: 4rem; /* Adjust font size to be larger */
-    color: white; /* Change text color for contrast */
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7); /* Optional: Add shadow for better visibility */
-  }
-  
+  padding: 20px;
+  border-radius: 10px;
+}
+
+/* .ultra-tour {
+  font-size: 3rem; 
+  font-weight: bold;
+} */
